@@ -4,6 +4,8 @@
 	copyright ?-2006 by the mpg123 project - free software under the terms of the LGPL 2.1
 	see COPYING and AUTHORS files in distribution or http://mpg123.org
 	initially written by the mysterious higway (apparently)
+
+	See synth_mmx.S about license history.
 */
 
 #include "mangle.h"
